--- a/MyPortfolio/Views/Home/Index.cshtml
+++ b/MyPortfolio/Views/Home/Index.cshtml
@@ -6,6 +6,8 @@
     ViewData["Title"] = Localizer["MyName"];
 }
 
+<partial name="_CultureDropdown" />
+
 <div class="text-center">
     <h1 class="display-4">@Localizer["MyName"]</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
