--- a/MyPortfolio/Views/Shared/_CultureDropdown.cshtml
+++ b/MyPortfolio/Views/Shared/_CultureDropdown.cshtml
@@ -14,10 +14,12 @@
         }
         return new SelectListItem { Value = culture.Name, Text = culture.Name };
     }).ToList();
+    var returnUrl = string.IsNullOrWhiteSpace(Context.Request.Path) ? "~/" : $"~{Context.Request.Path.Value}{Context.Request.QueryString}";
 }
 
 <div>
-    <form>
-        <select name="culture" asp-for="@culture.RequestCulture.UICulture.Name" asp-items="cultureList"></select>
+    <form asp-action="CultureManagement" asp-controller="Home" asp-route-returnUrl="@returnUrl" method="post" >
+        <select name="culture" asp-for="@culture.RequestCulture.UICulture.Name" asp-items="cultureList"
+            onchange="form.submit();"></select>
     </form>
 </div>
